# photoframe

./: .gitignore  Cargo.toml  Makefile  create_image.sh  create_sysroot.sh
.cargo/: config.toml
src/: main.rs
