[package]
name = "rpizerowroot"
version = "0.1.0"
edition = "2024"

[dependencies]
google-photoslibrary1 = "6.0.0"
hyper = "1.6.0"
hyper-rustls = "0.27.5"
rustls = { version = "0.23.23", features = ["ring"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
